[gd_scene load_steps=2 format=3 uid="uid://faxxs63wwsr5"]

[ext_resource type="Script" path="res://assets/modules/combo_minigame/combo_minigame.gd" id="1_vhbsl"]

[node name="ComboMinigame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vhbsl")

[node name="countdown_bar" type="ProgressBar" parent="."]
layout_mode = 2
offset_left = 574.0
offset_top = 621.0
offset_right = 578.0
offset_bottom = 648.0

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(0, 200)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="gesture_command_container" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="combo_countdown" type="Timer" parent="."]
one_shot = true

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
